# lights-timer

./: .gitignore  .gitmodules  LICENSE  README.md
Android/: settings.gradle.kts
Android/app/: build.gradle.kts
Android/gradle/: libs.versions.toml
RaspberryPi/: Makefile  detect.c
RaspberryPi/aqua_topic_provider/: Makefile  mqtt-devices-provider.service  provider  provider.c  provider.h  readme
RaspberryPi/sip/: kompiluj.sh  linphone_p2p_custom_devices.c  makefile  readme.txt  sip-receiver.service
TimerNTP/: .gitignore  CMakeLists.txt  Config.h  CredentialValues.cpp  CredentialValues.h  DiscoverMe.cpp  DiscoverMe.h  Logic.cpp  Logic.h  MQTTClient.cpp  MQTTClient.h  MQTTDiagnostics.cpp  MQTTDiagnostics.h  MQTT_diagnostics.md  MyHardware.cpp  MyHardware.h  MyWebServer.cpp  MyWebServer.h  NTPMachine.cpp  NTPMachine.h  OTAUpdates.cpp  OTAUpdates.h  OledDisplayFlow.cpp  OledDisplayFlow.h  TimerNTP.cpp  TimerNTP.h  TimerNTP.ino  hal_project_config.h  readme  watchdog.cpp  watchdog.h
TimerNTP/scripts/: configure-cmake.sh  core_version.txt  ensure-core-version.sh  refresh-intellisense.sh  select-board.sh  serial-monitor.py  serial-monitor.sh  serial-persistent.py  upload-uf2.sh  (+1 more)
libraries/Credentials/: .gitignore  CMakeLists.txt  Credentials.cpp  Credentials.h  MacHostMapping.cpp  MacHostMapping.h  README.md  ca_cert.c  ca_cert.h  library.properties
libraries/Credentials/cmake/: arm-none-eabi-toolchain.cmake
libraries/Credentials/config/: CredentialsData.example.h  MacHostMapping.example.cpp
libraries/Credentials/scripts/: build.sh  configure.sh
libraries/Credentials/src/: Credentials.h
materials/: lights-timer.pcb  remote-lights.pcb  ~lights-timer.pcb
scripts/: setup-credentials.sh
(+31 files in other folders)
